--- a/Dima.html
+++ b/Dima.html
@@ -80,7 +80,7 @@
           <div class="jobs">
             <div class="year-company">
               <h3>2017 - 2022</h3>
-              <a href="https://rubyplay.com/", title="https://rubyplay.com/">
+              <a href="https://rubyplay.com/", target="_blank", title="https://rubyplay.com/">
                 <h3>RubyPlay</h3>
               </a>
             </div>
@@ -93,7 +93,7 @@
           <div class="jobs">
             <div class="year-company">
               <h3>2015 - 2017</h3>
-              <a href="https://www.skywindgroup.com/", title="https://www.skywindgroup.com/">
+              <a href="https://www.skywindgroup.com/", target="_blank", title="https://www.skywindgroup.com/">
                 <h3>Skywind Group</h3>
               </a>
             </div>
@@ -106,7 +106,7 @@
           <div class="jobs">
             <div class="year-company">
               <h3>2014 - 2015</h3>
-              <a href="https://solarmedia.biz/?fbclid=IwAR0bXsk68A_TZBF01JII-EhO-qRwK1AG_k3Ys3k6bMjXvrWRaUK332EVSAE", title="https://solarmedia.biz/">
+              <a href="https://solarmedia.biz/?fbclid=IwAR0bXsk68A_TZBF01JII-EhO-qRwK1AG_k3Ys3k6bMjXvrWRaUK332EVSAE" target="_blank", title="https://solarmedia.biz/">
                 <h3>Solarmedia /<br>Studio "Pilot"</h3>
               </a>  
             </div>
@@ -119,7 +119,7 @@
           <div class="jobs">
             <div class="year-company">
               <h3>2017 - 2014</h3>
-              <a href="http://www.ersgamestudios.com/" title="http://www.ersgamestudios.com/">
+              <a href="http://www.ersgamestudios.com/", target="_blank", target="_blank",title="http://www.ersgamestudios.com/">
                 <h3>ERS Games Studios</h3>
               </a>
             </div>
@@ -136,7 +136,7 @@
               </div>
               <div class="text">
                   <h3>iAnimate Animation School</h3>
-                  <a href="https://ianimate.net/" title="https://ianimate.net/">
+                  <a href="https://ianimate.net/", target="_blank", title="https://ianimate.net/">
                     <img src="img/link-icon.png">
                   </a>
               </div>
@@ -147,7 +147,7 @@
               </div>
               <div class="text">
                 <h3>Animsquad Animation School</h3>
-                <a href="https://www.animsquad.com/" title="https://www.animsquad.com/">
+                <a href="https://www.animsquad.com/", target="_blank", title="https://www.animsquad.com/">
                   <img src="img/link-icon.png">
                 </a>
               </div>
@@ -178,22 +178,22 @@
           <h2>Contact me</h2>
           <div class="contact-icons">
             <div class="linked">
-              <a href="https://www.linkedin.com/in/dmitri-petrov/">
+              <a href="https://www.linkedin.com/in/dmitri-petrov/", target="_blank">
                 <img src="img/linkedin.png" alt="Linkedin" title="www.linkedin.com/in/dmitri-petrov/"> 
               </a>
             </div>
             <div class="gmail">
-              <a href="mailto:gear.shiftin42@gmail.com" alt="E-Mail" title="gear.shiftin42@gmail.com"> 
+              <a href="mailto:gear.shiftin42@gmail.com", target="_blank" alt="E-Mail" title="gear.shiftin42@gmail.com"> 
                 <img src="img/gmail.png"> 
               </a>
             </div> 
             <div class="discord">
-              <a href="https://discordapp.com/users/Dmitri#4430" alt="discord" title="Dmitri#4430">
+              <a href="https://discordapp.com/users/Dmitri#4430", target="_blank", alt="discord" title="Dmitri#4430">
                 <img src="img/discord.png">
               </a>  
             </div> 
             <div class="art">
-              <a href="https://www.artstation.com/landmine" alt="ArtStation" title="Dmitri Petrov">
+              <a href="https://www.artstation.com/landmine", target="_blank", alt="ArtStation" title="Dmitri Petrov">
                 <img src="img/artstation.png">
               </a> 
             </div> 
