--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
               </div>
               <h2>Skills</h2>
               <div class="skills">
+                <div>
+                  <img src="img/icon_ae.png", alt="Adobe After Effects", title="Adobe After Effects">
+                </div>
+                <div>
+                  <img src="img/icon_blender.png", alt="Blender", title="Blender">
+                </div>
+                <div>
+                  <img src="img/icon_ps.png", alt="Adobe Photoshop", title="Adobe Photoshop">
+                </div>
+                <div>
+                  <img src="img/icon_substance.png", alt="Substance", title="Substance">
+                </div>
+                <div>
+                  <img src="img/icon_zbrush.png", alt="ZBrush", title="ZBrush">
+                </div>
+                <div>
+                  <img src="img/icon_marmoset.png", alt="Marmoset", title="Marmoset">
+                </div>
+                <div>
+                  <img src="img/icon_maya.png", alt="Maya", title="Maya">
+                </div>
              
               </div>
               <h2>Languages</h2>
