--- a/index.html
+++ b/index.html
@@ -8,27 +8,24 @@
 
 <body>
 
-    <!-- <header>
-      <h1 class="header">Dmitri Petrov<br><span>2D/3D Animator</span></h1>
-    </header> -->
 
     <div class="container">
-
       <div class="name">
-        <h1 class="header">Dmitri Petrov<br><span>2D/3D Animator</span></h1>
-    </header>
+        <h1 class="header">Dmitri Petrov</h1>
       </div>
 
-      <div class="about">
-        <h2>About</h2>
-        <p class="about">An exerienced CG animator passionate about 3D animation, and a firm grasp of rigging, skinning, and modeling. Being keen on gaming, I regard every new project as a change to develop my skills and push my professional boundaries.</p>
+      <div class="job">
+        <h2>2D/3D Animator</h2>
       </div>
-
 
       <div class="left-side">
           <div class="profile-text">
               <div class="image-box">
                   <img src="img\dima.jpg">
+              </div>
+              <div class="about">
+                <h2>About</h2>
+                <p class="about">An experienced CG animator with a particular interest in 3D animation and a firm grasp of rigging, skinning and modeling. I regard every new project as a chance to develop my skills and push my professional boundaries.</p>
               </div>
               <h2>Skills</h2>
               <div class="skills">
