header fix for sure!

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 </head>
 
 <body>
-
+    <header>
+      <h1 class="header">Dmitri Petrov<br><span>2/3D Animator</span></h1>
+    </header>
 
     <div class="container">
-      <div class="name">
+      <!-- <div class="name">
         <h1 class="header">Dmitri Petrov</h1>
       </div>
 
       <div class="job">
         <h1>Dmitri Petrov</h1>
         <h2>2D/3D Animator</h2>
-      </div>
+      </div> -->
 
       <div class="left-side">
           <div class="profile-text">
