--- a/index.html
+++ b/index.html
@@ -220,9 +220,20 @@
             </div> 
           </div>
         </div>
-
-        
-    </div>    
+        <div class="CV">
+          <a href="https://drive.google.com/file/d/1TGxb_U7ymXX1hrJBnuQhQ3LY9i8lxXBD/view?usp=sharing", title="Download form GoogleDrive", target="_blank">
+            <h3>Download PDF Version</h3>
+          </a>
+        </div>
+        <div class="vids">
+            <a href="https://drive.google.com/file/d/1FoR7lXiBkOzMB_8656cWcYD4uWFARNkE/view?usp=sharing", title="Watch a Video", target="_blank">
+              <h3>Watch My Showreel</h3>
+            </a>
+          <a href="https://drive.google.com/file/d/1Q2KOzcqHq_yNNxS7hcgriSNZkaXYNN2E/view?usp=sharing", title="Watch Slot Animation Samples", target="_blank">
+            <h3>Slot Animation Samples</h3>
+          </a>
+        </div>
+    </div>  
     
   </body>
  
