bottom margin +10px

--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
           </a>
         </div>
         <div class="vids">
-            <a href="https://drive.google.com/file/d/1FoR7lXiBkOzMB_8656cWcYD4uWFARNkE/view?usp=sharing", title="Watch a Video", target="_blank">
+            <a href="https://drive.google.com/file/d/1FoR7lXiBkOzMB_8656cWcYD4uWFARNkE/view?usp=sharing", title="Watch the Showreel", target="_blank">
               <h3>Watch My Showreel</h3>
             </a>
-          <a href="https://drive.google.com/file/d/1Q2KOzcqHq_yNNxS7hcgriSNZkaXYNN2E/view?usp=sharing", title="Watch Slot Animation Samples", target="_blank">
+          <a href="https://drive.google.com/file/d/1Q2KOzcqHq_yNNxS7hcgriSNZkaXYNN2E/view?usp=sharing", title="Watch on Slot Animation Samples", target="_blank">
             <h3>Slot Animation Samples</h3>
           </a>
         </div>
