--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="year-company">
               <h3>2017 - 2022</h3>
               <a href="https://rubyplay.com/", target="_blank", title="https://rubyplay.com/">
-                <h3>RubyPlay</h3>
+                <h3 class="company">RubyPlay</h3>
               </a>
             </div>
             <div class="text">
@@ -115,7 +115,7 @@
             <div class="year-company">
               <h3>2015 - 2017</h3>
               <a href="https://www.skywindgroup.com/", target="_blank", title="https://www.skywindgroup.com/">
-                <h3>Skywind Group</h3>
+                <h3 class="company">Skywind Group</h3>
               </a>
             </div>
             <div class="text">
@@ -128,7 +128,7 @@
             <div class="year-company">
               <h3>2014 - 2015</h3>
               <a href="https://solarmedia.biz/?fbclid=IwAR0bXsk68A_TZBF01JII-EhO-qRwK1AG_k3Ys3k6bMjXvrWRaUK332EVSAE" target="_blank", title="https://solarmedia.biz/">
-                <h3>Solarmedia /<br>Studio "Pilot"</h3>
+                <h3 class="company">Solarmedia /<br>Studio "Pilot"</h3>
               </a>  
             </div>
             <div class="text">
@@ -141,7 +141,7 @@
             <div class="year-company">
               <h3>2017 - 2014</h3>
               <a href="http://www.ersgamestudios.com/", target="_blank", target="_blank",title="http://www.ersgamestudios.com/">
-                <h3>ERS Games Studios</h3>
+                <h3 class="company">ERS Games Studios</h3>
               </a>
             </div>
             <div class="text">
