--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <div>
                   <img src="img/icon_substance.png", alt="Substance", title="Substance">
                 </div>
+              </div>
+              <div class="skills2">
                 <div>
                   <img src="img/icon_zbrush.png", alt="ZBrush", title="ZBrush">
                 </div>
