--- a/index.html
+++ b/index.html
@@ -223,8 +223,25 @@
               </a> 
             </div> 
           </div>
-        </div>
-        <div class="CV">
+          <div class="downloads">
+            <div class="CV">
+              <a href="https://drive.google.com/file/d/1TGxb_U7ymXX1hrJBnuQhQ3LY9i8lxXBD/view?usp=sharing", title="Download form GoogleDrive", target="_blank">
+                <h3>Download CV in PDF</h3>
+              </a>
+            </div>
+            <div class="vids">
+                <a href="https://drive.google.com/file/d/1FoR7lXiBkOzMB_8656cWcYD4uWFARNkE/view?usp=sharing", title="Watch the Showreel", target="_blank">
+                  <h3>Watch Showreel</h3>
+                </a>
+            </div>
+            <div class="vids2">
+              <a href="https://drive.google.com/file/d/1Q2KOzcqHq_yNNxS7hcgriSNZkaXYNN2E/view?usp=sharing", title="Watch on Slot Animation Samples", target="_blank">
+                <h3>Slot Animations</h3>
+              </a>
+            </div>
+          </div>
+        </div>      
+        <!-- <div class="CV">
           <a href="https://drive.google.com/file/d/1TGxb_U7ymXX1hrJBnuQhQ3LY9i8lxXBD/view?usp=sharing", title="Download form GoogleDrive", target="_blank">
             <h3>Download PDF Version</h3>
           </a>
@@ -236,7 +253,7 @@
           <a href="https://drive.google.com/file/d/1Q2KOzcqHq_yNNxS7hcgriSNZkaXYNN2E/view?usp=sharing", title="Watch on Slot Animation Samples", target="_blank">
             <h3>Slot Animation Samples</h3>
           </a>
-        </div>
+        </div>  -->
     </div>  
     
   </body>
