--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <h2>My Hobbies & Interests</h2>
         <div class="hobbies"> 
           <div class="leisure">
-            <p>Sci-fi books and movies, video & tabletop games, airbrush, 3D printing;<br>Playing bass, keyboard;<br>Console repairs and modifications;<br>Motorcycle road racing, supercross.</p>
+            <p>Sci-fi books and movies, video & tabletop games;<br>Playing bass, keyboard, airbrush;<br>Console repairs and modifications, 3D printing;<br>Motorcycle road racing, supercross.</p>
           </div>
          </div>
       </div>
