--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="2D animator, 3D animator, art, CG, modelling, modeling, rigging, skinning, slots, gaming, lead, CV, resume, candidate, freelancer, experienced, Blender, ZBrush, Maya, Marmoset, Substance, PS, Ae, Photoshop, After Effects, Adobe">
-    <meta name="description" content="Dmitri Petrov. An experienced CG animator with a particular interest in 3D animation and a firm grasp of rigging, skinning and modeling. I regard every new project as a chance to develop my skills and push my professional boundaries.">
-    <title>Dmitri Petrov 2/3D Animator CV</title>
+    <meta name="description" content="An experienced CG animator with a particular interest in 3D animation and a firm grasp of rigging, skinning and modeling. I regard every new project as a chance to develop my skills and push my professional boundaries.">
+    <title>Dmitri Petrov</title>
     <link rel=stylesheet type="text/css" href="stylesheet.css">
 </head>
 
